--- a/archives/toutiao-search/2023-10-09.md
+++ b/archives/toutiao-search/2023-10-09.md
@@ -1,64 +1,84 @@
 # 2023-10-09
 
-共 180 条
+共 195 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Oct 09 2023 13:00:41 GMT+0800 (China Standard Time) -->
-1. [亚运会闭幕式日本8分钟表演引热议](https://so.toutiao.com/search?keyword=亚运会闭幕式日本8分钟表演引热议)
-1. [男孩在泳池不慎脱离泳圈后溺亡](https://so.toutiao.com/search?keyword=男孩在泳池不慎脱离泳圈后溺亡)
+<!-- 最后更新时间 Mon Oct 09 2023 14:00:39 GMT+0800 (China Standard Time) -->
+1. [60秒回顾杭州亚运会闭幕式精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾杭州亚运会闭幕式精彩瞬间)
+1. [李思思从央视离职](https://so.toutiao.com/search?keyword=李思思从央视离职)
 1. [120秒回顾杭州亚运赛场精彩瞬间](https://so.toutiao.com/search?keyword=120秒回顾杭州亚运赛场精彩瞬间)
-1. [光大集团原董事长李晓鹏被双开](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被双开)
-1. [男子藏刀列车上杀人 安检员被追责](https://so.toutiao.com/search?keyword=男子藏刀列车上杀人+安检员被追责)
-1. [女子吐槽丈夫每年回无人老家太费钱](https://so.toutiao.com/search?keyword=女子吐槽丈夫每年回无人老家太费钱)
+1. [开幕秋分闭幕寒露是中国人的浪漫](https://so.toutiao.com/search?keyword=开幕秋分闭幕寒露是中国人的浪漫)
+1. [日本发布海啸预警](https://so.toutiao.com/search?keyword=日本发布海啸预警)
 1. [这些证书已取消别再考了](https://so.toutiao.com/search?keyword=这些证书已取消别再考了)
+1. [亚运会闭幕式日本8分钟表演引热议](https://so.toutiao.com/search?keyword=亚运会闭幕式日本8分钟表演引热议)
+1. [光大集团原董事长李晓鹏被双开](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被双开)
+1. [高校阅览室学生打游戏管理员抽烟](https://so.toutiao.com/search?keyword=高校阅览室学生打游戏管理员抽烟)
+1. [空心菜是抽筋菜吃完会抽筋？谣言](https://so.toutiao.com/search?keyword=空心菜是抽筋菜吃完会抽筋？谣言)
+1. [巴以冲突已致1100余人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致1100余人死亡)
+1. [巴以双方支持者在纽约街头互相谩骂](https://so.toutiao.com/search?keyword=巴以双方支持者在纽约街头互相谩骂)
+1. [哈马斯拒停火称“战场上分出高下”](https://so.toutiao.com/search?keyword=哈马斯拒停火称“战场上分出高下”)
+1. [巴以冲突下中国建筑工人：不敢出门](https://so.toutiao.com/search?keyword=巴以冲突下中国建筑工人：不敢出门)
+1. [媒体发以士兵被哈马斯抓住游街视频](https://so.toutiao.com/search?keyword=媒体发以士兵被哈马斯抓住游街视频)
+1. [加沙地带民众：以军炸毁我们房子](https://so.toutiao.com/search?keyword=加沙地带民众：以军炸毁我们房子)
+1. [超12万巴勒斯坦民众逃离加沙](https://so.toutiao.com/search?keyword=超12万巴勒斯坦民众逃离加沙)
+1. [以色列音乐节遇袭 至少260人死亡](https://so.toutiao.com/search?keyword=以色列音乐节遇袭+至少260人死亡)
+1. [哈马斯武器为何让以色列装备哑火了](https://so.toutiao.com/search?keyword=哈马斯武器为何让以色列装备哑火了)
+1. [新郎父亲亲友团列队迎宾](https://so.toutiao.com/search?keyword=新郎父亲亲友团列队迎宾)
+1. [3名队员未劝止拍摄不雅画面被停职](https://so.toutiao.com/search?keyword=3名队员未劝止拍摄不雅画面被停职)
+1. [走失女童爸爸发声：是我自己大意](https://so.toutiao.com/search?keyword=走失女童爸爸发声：是我自己大意)
+1. [原中国中化集团副总经理杜国盛被查](https://so.toutiao.com/search?keyword=原中国中化集团副总经理杜国盛被查)
+1. [男孩在泳池不慎脱离泳圈后溺亡](https://so.toutiao.com/search?keyword=男孩在泳池不慎脱离泳圈后溺亡)
+1. [女子吐槽丈夫每年回无人老家太费钱](https://so.toutiao.com/search?keyword=女子吐槽丈夫每年回无人老家太费钱)
+1. [母女驾车去看外婆回程落水双双溺亡](https://so.toutiao.com/search?keyword=母女驾车去看外婆回程落水双双溺亡)
+1. [以色列中国留学生发交战视频](https://so.toutiao.com/search?keyword=以色列中国留学生发交战视频)
+1. [足球报：许家印被抓后球队一切正常](https://so.toutiao.com/search?keyword=足球报：许家印被抓后球队一切正常)
+1. [创亚洲纪录潜水员在广西下水失联](https://so.toutiao.com/search?keyword=创亚洲纪录潜水员在广西下水失联)
+1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
+1. [男子藏刀列车上杀人 安检员被追责](https://so.toutiao.com/search?keyword=男子藏刀列车上杀人+安检员被追责)
+1. [成品油明晚或迎下调](https://so.toutiao.com/search?keyword=成品油明晚或迎下调)
+1. [金价跌跌不休 大金镯子还能安排吗](https://so.toutiao.com/search?keyword=金价跌跌不休+大金镯子还能安排吗)
+1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
+1. [湖南多地披露编外人员清退工作](https://so.toutiao.com/search?keyword=湖南多地披露编外人员清退工作)
+1. [多名落马官员被逮捕](https://so.toutiao.com/search?keyword=多名落马官员被逮捕)
+1. [张雨霏回应获亚运女子MVP](https://so.toutiao.com/search?keyword=张雨霏回应获亚运女子MVP)
+1. [乌前总统顾问：巴以冲突对乌军不利](https://so.toutiao.com/search?keyword=乌前总统顾问：巴以冲突对乌军不利)
+1. [女方曝与罗中旭交往细节](https://so.toutiao.com/search?keyword=女方曝与罗中旭交往细节)
+1. [巴勒斯坦居民：炸弹不分平民和部队](https://so.toutiao.com/search?keyword=巴勒斯坦居民：炸弹不分平民和部队)
+1. [冯琳主持人大赛第一名晋级](https://so.toutiao.com/search?keyword=冯琳主持人大赛第一名晋级)
+1. [乔帅：CBA比赛时长应改为40分钟](https://so.toutiao.com/search?keyword=乔帅：CBA比赛时长应改为40分钟)
+1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
+1. [空军原司令员于振武上将逝世](https://so.toutiao.com/search?keyword=空军原司令员于振武上将逝世)
+1. [妻子过生日丈夫偷偷买回6000元手机](https://so.toutiao.com/search?keyword=妻子过生日丈夫偷偷买回6000元手机)
+1. [王思瑶亚运会显眼包](https://so.toutiao.com/search?keyword=王思瑶亚运会显眼包)
+1. [我飞行员冒雨拦截外国军机画面曝光](https://so.toutiao.com/search?keyword=我飞行员冒雨拦截外国军机画面曝光)
+1. [小米高级副总裁张峰将离职](https://so.toutiao.com/search?keyword=小米高级副总裁张峰将离职)
+1. [两男生半夜“秀腿法”踢碎店家拖把](https://so.toutiao.com/search?keyword=两男生半夜“秀腿法”踢碎店家拖把)
+1. [湖北男子当街锤人致死？公安回应](https://so.toutiao.com/search?keyword=湖北男子当街锤人致死？公安回应)
 1. [孙志洋任广州代市长](https://so.toutiao.com/search?keyword=孙志洋任广州代市长)
 1. [王毅与美参议院多数党领袖舒默会谈](https://so.toutiao.com/search?keyword=王毅与美参议院多数党领袖舒默会谈)
-1. [空心菜是抽筋菜吃完会抽筋？谣言](https://so.toutiao.com/search?keyword=空心菜是抽筋菜吃完会抽筋？谣言)
 1. [媒体：巴以冲突将迫使美做艰难决定](https://so.toutiao.com/search?keyword=媒体：巴以冲突将迫使美做艰难决定)
-1. [巴以冲突已致1100余人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致1100余人死亡)
 1. [以士兵被哈马斯抓住游街视频曝光](https://so.toutiao.com/search?keyword=以士兵被哈马斯抓住游街视频曝光)
-1. [巴以双方支持者在纽约街头互相谩骂](https://so.toutiao.com/search?keyword=巴以双方支持者在纽约街头互相谩骂)
 1. [以色列正式向哈马斯宣战](https://so.toutiao.com/search?keyword=以色列正式向哈马斯宣战)
 1. [以军精锐部队两名上校被杀](https://so.toutiao.com/search?keyword=以军精锐部队两名上校被杀)
 1. [一图看懂巴以冲突时间线及多方反应](https://so.toutiao.com/search?keyword=一图看懂巴以冲突时间线及多方反应)
-1. [巴以冲突下中国建筑工人：不敢出门](https://so.toutiao.com/search?keyword=巴以冲突下中国建筑工人：不敢出门)
-1. [哈马斯武器为何让以色列装备哑火了](https://so.toutiao.com/search?keyword=哈马斯武器为何让以色列装备哑火了)
 1. [网传傅艺伟30岁儿子高乐男去世](https://so.toutiao.com/search?keyword=网传傅艺伟30岁儿子高乐男去世)
-1. [3名队员未劝止拍摄不雅画面被停职](https://so.toutiao.com/search?keyword=3名队员未劝止拍摄不雅画面被停职)
-1. [走失女童爸爸发声：是我自己大意](https://so.toutiao.com/search?keyword=走失女童爸爸发声：是我自己大意)
 1. [德国：多名德以双重国籍者被绑架](https://so.toutiao.com/search?keyword=德国：多名德以双重国籍者被绑架)
-1. [以色列音乐节遇袭 至少260人死亡](https://so.toutiao.com/search?keyword=以色列音乐节遇袭+至少260人死亡)
-1. [日本发布海啸预警](https://so.toutiao.com/search?keyword=日本发布海啸预警)
 1. [主持人李思思疑央视离职](https://so.toutiao.com/search?keyword=主持人李思思疑央视离职)
-1. [哈马斯拒停火称“战场上分出高下”](https://so.toutiao.com/search?keyword=哈马斯拒停火称“战场上分出高下”)
 1. [杭州亚运会闭幕式引发热烈反响](https://so.toutiao.com/search?keyword=杭州亚运会闭幕式引发热烈反响)
-1. [妻子过生日丈夫偷偷买回6000元手机](https://so.toutiao.com/search?keyword=妻子过生日丈夫偷偷买回6000元手机)
-1. [母女驾车去看外婆回程落水双双溺亡](https://so.toutiao.com/search?keyword=母女驾车去看外婆回程落水双双溺亡)
 1. [货车停放10多天司机被发现早已身亡](https://so.toutiao.com/search?keyword=货车停放10多天司机被发现早已身亡)
-1. [以色列中国留学生发交战视频](https://so.toutiao.com/search?keyword=以色列中国留学生发交战视频)
-1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
-1. [多名落马官员被逮捕](https://so.toutiao.com/search?keyword=多名落马官员被逮捕)
 1. [以色列街头被炸现场：建筑破坏严重](https://so.toutiao.com/search?keyword=以色列街头被炸现场：建筑破坏严重)
-1. [高校阅览室学生打游戏管理员抽烟](https://so.toutiao.com/search?keyword=高校阅览室学生打游戏管理员抽烟)
 1. [一图读懂中国亚运新高度](https://so.toutiao.com/search?keyword=一图读懂中国亚运新高度)
 1. [中国工人抓拍到以军铁穹拦截火箭弹](https://so.toutiao.com/search?keyword=中国工人抓拍到以军铁穹拦截火箭弹)
 1. [泰总理：准备撤离在以色列的泰国人](https://so.toutiao.com/search?keyword=泰总理：准备撤离在以色列的泰国人)
-1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
 1. [亚运会众多“显眼包”凭实力出圈](https://so.toutiao.com/search?keyword=亚运会众多“显眼包”凭实力出圈)
 1. [新人婚礼前新郎父亲亲友团列队欢迎](https://so.toutiao.com/search?keyword=新人婚礼前新郎父亲亲友团列队欢迎)
-1. [湖南多地披露编外人员清退工作](https://so.toutiao.com/search?keyword=湖南多地披露编外人员清退工作)
-1. [乔帅：CBA比赛时长应改为40分钟](https://so.toutiao.com/search?keyword=乔帅：CBA比赛时长应改为40分钟)
-1. [金价跌跌不休 大金镯子还能安排吗](https://so.toutiao.com/search?keyword=金价跌跌不休+大金镯子还能安排吗)
 1. [以寻求埃及斡旋释放哈马斯劫持人质](https://so.toutiao.com/search?keyword=以寻求埃及斡旋释放哈马斯劫持人质)
 1. [香港提升以色列外游警示级别至红色](https://so.toutiao.com/search?keyword=香港提升以色列外游警示级别至红色)
 1. [台风“小犬”远离 澳门改发3号风球](https://so.toutiao.com/search?keyword=台风“小犬”远离+澳门改发3号风球)
-1. [王思瑶亚运会显眼包](https://so.toutiao.com/search?keyword=王思瑶亚运会显眼包)
 1. [涂磊谈女童失踪：愿用运气换好消息](https://so.toutiao.com/search?keyword=涂磊谈女童失踪：愿用运气换好消息)
-1. [开幕秋分闭幕寒露是中国人的浪漫](https://so.toutiao.com/search?keyword=开幕秋分闭幕寒露是中国人的浪漫)
 1. [专家谈如何看待美国“遏华派”访华](https://so.toutiao.com/search?keyword=专家谈如何看待美国“遏华派”访华)
 1. [商会回应中以混血女孩遭哈马斯绑架](https://so.toutiao.com/search?keyword=商会回应中以混血女孩遭哈马斯绑架)
 1. [拜登与以色列总理通话](https://so.toutiao.com/search?keyword=拜登与以色列总理通话)
-1. [巴勒斯坦居民：炸弹不分平民和部队](https://so.toutiao.com/search?keyword=巴勒斯坦居民：炸弹不分平民和部队)
 1. [高速突遇事故 轿车“神反应”躲避](https://so.toutiao.com/search?keyword=高速突遇事故+轿车“神反应”躲避)
 1. [专家：舒默访华有三大不同](https://so.toutiao.com/search?keyword=专家：舒默访华有三大不同)
 1. [阿盟秘书长将与俄外长商讨巴以问题](https://so.toutiao.com/search?keyword=阿盟秘书长将与俄外长商讨巴以问题)
@@ -66,7 +86,6 @@
 1. [“小犬”逞威 香港发布黑雨警告](https://so.toutiao.com/search?keyword=“小犬”逞威+香港发布黑雨警告)
 1. [广东一地宣布停课、封桥、停航](https://so.toutiao.com/search?keyword=广东一地宣布停课、封桥、停航)
 1. [乔帅：我们非常渴望亚运会冠军](https://so.toutiao.com/search?keyword=乔帅：我们非常渴望亚运会冠军)
-1. [冯琳主持人大赛第一名晋级](https://so.toutiao.com/search?keyword=冯琳主持人大赛第一名晋级)
 1. [麦卡锡：以议长说这是珍珠港事件](https://so.toutiao.com/search?keyword=麦卡锡：以议长说这是珍珠港事件)
 1. [律师：银行无权要求客户扫码装软件](https://so.toutiao.com/search?keyword=律师：银行无权要求客户扫码装软件)
 1. [乔帅：我想让男篮队员们无所畏惧](https://so.toutiao.com/search?keyword=乔帅：我想让男篮队员们无所畏惧)
@@ -87,10 +106,8 @@
 1. [港媒：美国对华外交或“弹性调整”](https://so.toutiao.com/search?keyword=港媒：美国对华外交或“弹性调整”)
 1. [“赎罪日战争”是怎么回事](https://so.toutiao.com/search?keyword=“赎罪日战争”是怎么回事)
 1. [第六次中东战争会爆发吗？专家解读](https://so.toutiao.com/search?keyword=第六次中东战争会爆发吗？专家解读)
-1. [女方曝与罗中旭交往细节](https://so.toutiao.com/search?keyword=女方曝与罗中旭交往细节)
 1. [专家：望舒默访华有助中美关系向稳](https://so.toutiao.com/search?keyword=专家：望舒默访华有助中美关系向稳)
 1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
-1. [螃蟹卡套路有多深](https://so.toutiao.com/search?keyword=螃蟹卡套路有多深)
 1. [沃克赛后与阿森纳助教发生冲突](https://so.toutiao.com/search?keyword=沃克赛后与阿森纳助教发生冲突)
 1. [韩媒：美国有可能逼出中国版阿斯麦](https://so.toutiao.com/search?keyword=韩媒：美国有可能逼出中国版阿斯麦)
 1. [哈马斯和杰哈德扣押130余名人质](https://so.toutiao.com/search?keyword=哈马斯和杰哈德扣押130余名人质)
@@ -114,7 +131,6 @@
 1. [欧盟总部大楼点亮以色列国旗](https://so.toutiao.com/search?keyword=欧盟总部大楼点亮以色列国旗)
 1. [老鼠回来发现家被偷了](https://so.toutiao.com/search?keyword=老鼠回来发现家被偷了)
 1. [李子柒商业版图盘点](https://so.toutiao.com/search?keyword=李子柒商业版图盘点)
-1. [小米高级副总裁张峰将离职](https://so.toutiao.com/search?keyword=小米高级副总裁张峰将离职)
 1. [港交所：上午交易时段延迟开市](https://so.toutiao.com/search?keyword=港交所：上午交易时段延迟开市)
 1. [起猛了看到李子柒营业了](https://so.toutiao.com/search?keyword=起猛了看到李子柒营业了)
 1. [汪小菲说想与大S复婚](https://so.toutiao.com/search?keyword=汪小菲说想与大S复婚)
@@ -124,7 +140,6 @@
 1. [媒体对话颐和园四大部洲“扫地僧”](https://so.toutiao.com/search?keyword=媒体对话颐和园四大部洲“扫地僧”)
 1. [马丁内利86分钟绝杀 阿森纳1-0曼城](https://so.toutiao.com/search?keyword=马丁内利86分钟绝杀+阿森纳1-0曼城)
 1. [女子帮离世闺蜜照护女儿14年](https://so.toutiao.com/search?keyword=女子帮离世闺蜜照护女儿14年)
-1. [60秒回顾杭州亚运会闭幕式精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾杭州亚运会闭幕式精彩瞬间)
 1. [以色列此次遇袭为何伤亡惨重](https://so.toutiao.com/search?keyword=以色列此次遇袭为何伤亡惨重)
 1. [古特雷斯强烈谴责哈马斯袭击以色列](https://so.toutiao.com/search?keyword=古特雷斯强烈谴责哈马斯袭击以色列)
 1. [外媒：哈马斯一领导人被以色列消灭](https://so.toutiao.com/search?keyword=外媒：哈马斯一领导人被以色列消灭)
