--- a/archives/toutiao-search/2023-10-09.md
+++ b/archives/toutiao-search/2023-10-09.md
@@ -1,58 +1,80 @@
 # 2023-10-09
 
-共 213 条
+共 233 条
 
 <!-- BEGIN TOUTIAO -->
-<!-- 最后更新时间 Mon Oct 09 2023 15:00:57 GMT+0800 (China Standard Time) -->
+<!-- 最后更新时间 Mon Oct 09 2023 16:00:45 GMT+0800 (China Standard Time) -->
+1. [李思思从央视离职](https://so.toutiao.com/search?keyword=李思思从央视离职)
 1. [光大集团原董事长李晓鹏被双开](https://so.toutiao.com/search?keyword=光大集团原董事长李晓鹏被双开)
-1. [亚运会闭幕式日本8分钟表演引热议](https://so.toutiao.com/search?keyword=亚运会闭幕式日本8分钟表演引热议)
 1. [120秒回顾杭州亚运赛场精彩瞬间](https://so.toutiao.com/search?keyword=120秒回顾杭州亚运赛场精彩瞬间)
-1. [女子违停后男子自己撞上车并拍视频](https://so.toutiao.com/search?keyword=女子违停后男子自己撞上车并拍视频)
+1. [妈妈外出打工 5岁女儿呼喊让人心碎](https://so.toutiao.com/search?keyword=妈妈外出打工+5岁女儿呼喊让人心碎)
 1. [男子藏刀列车上杀人 安检员被追责](https://so.toutiao.com/search?keyword=男子藏刀列车上杀人+安检员被追责)
 1. [巴以冲突已致1100余人死亡](https://so.toutiao.com/search?keyword=巴以冲突已致1100余人死亡)
-1. [轿车撞进加油站起火 众人惊险救援](https://so.toutiao.com/search?keyword=轿车撞进加油站起火+众人惊险救援)
 1. [妻子过生日丈夫偷偷买回6000元手机](https://so.toutiao.com/search?keyword=妻子过生日丈夫偷偷买回6000元手机)
-1. [日本发布海啸预警](https://so.toutiao.com/search?keyword=日本发布海啸预警)
+1. [女子吐槽丈夫每年回无人老家太费钱](https://so.toutiao.com/search?keyword=女子吐槽丈夫每年回无人老家太费钱)
+1. [芝加哥近千只鸟撞展览中心窗户死亡](https://so.toutiao.com/search?keyword=芝加哥近千只鸟撞展览中心窗户死亡)
 1. [空心菜是抽筋菜吃完会抽筋？谣言](https://so.toutiao.com/search?keyword=空心菜是抽筋菜吃完会抽筋？谣言)
 1. [专家：巴以“攻守易位”极为罕见](https://so.toutiao.com/search?keyword=专家：巴以“攻守易位”极为罕见)
 1. [被浙江的婚宴震惊到了](https://so.toutiao.com/search?keyword=被浙江的婚宴震惊到了)
 1. [多方呼吁巴以冲突双方保持克制](https://so.toutiao.com/search?keyword=多方呼吁巴以冲突双方保持克制)
 1. [月薪4000的小镇青年背过万的包](https://so.toutiao.com/search?keyword=月薪4000的小镇青年背过万的包)
-1. [哈马斯武器为何让以色列装备哑火了](https://so.toutiao.com/search?keyword=哈马斯武器为何让以色列装备哑火了)
+1. [哈马斯战士近距离射杀以军士兵](https://so.toutiao.com/search?keyword=哈马斯战士近距离射杀以军士兵)
 1. [美方要求多个阿拉伯国家谴责哈马斯](https://so.toutiao.com/search?keyword=美方要求多个阿拉伯国家谴责哈马斯)
+1. [哈马斯武器为何让以色列装备哑火了](https://so.toutiao.com/search?keyword=哈马斯武器为何让以色列装备哑火了)
+1. [巴以冲突引爆全球油市](https://so.toutiao.com/search?keyword=巴以冲突引爆全球油市)
+1. [加沙民众：盼巴以冲突停止](https://so.toutiao.com/search?keyword=加沙民众：盼巴以冲突停止)
+1. [乌方称两名乌公民在巴以冲突中死亡](https://so.toutiao.com/search?keyword=乌方称两名乌公民在巴以冲突中死亡)
+1. [走失女童的蓝色衣服为何值得关注](https://so.toutiao.com/search?keyword=走失女童的蓝色衣服为何值得关注)
+1. [3名队员未劝止拍摄不雅画面被停职](https://so.toutiao.com/search?keyword=3名队员未劝止拍摄不雅画面被停职)
+1. [伊朗否认参与哈马斯军事行动](https://so.toutiao.com/search?keyword=伊朗否认参与哈马斯军事行动)
+1. [以色列中国留学生发交战视频](https://so.toutiao.com/search?keyword=以色列中国留学生发交战视频)
+1. [在以色列华人：待在宿舍等冲突结束](https://so.toutiao.com/search?keyword=在以色列华人：待在宿舍等冲突结束)
+1. [女子大堂取外卖摔断玉镯酒店该赔吗](https://so.toutiao.com/search?keyword=女子大堂取外卖摔断玉镯酒店该赔吗)
+1. [三分钟速览巴以战事新情况](https://so.toutiao.com/search?keyword=三分钟速览巴以战事新情况)
+1. [多部门调查男童游泳馆溺亡](https://so.toutiao.com/search?keyword=多部门调查男童游泳馆溺亡)
+1. [33层楼被底楼住户挖出四室一厅](https://so.toutiao.com/search?keyword=33层楼被底楼住户挖出四室一厅)
+1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
+1. [走失女童爸爸发声：是我自己大意](https://so.toutiao.com/search?keyword=走失女童爸爸发声：是我自己大意)
+1. [以色列音乐节遇袭 至少260人死亡](https://so.toutiao.com/search?keyword=以色列音乐节遇袭+至少260人死亡)
+1. [王楚钦告别亚运会并晒锅盖头自拍](https://so.toutiao.com/search?keyword=王楚钦告别亚运会并晒锅盖头自拍)
+1. [媒体：巴以问题不能再拖了](https://so.toutiao.com/search?keyword=媒体：巴以问题不能再拖了)
+1. [母女驾车去看外婆回程落水双双溺亡](https://so.toutiao.com/search?keyword=母女驾车去看外婆回程落水双双溺亡)
+1. [女子违停后男子自己撞上车并拍视频](https://so.toutiao.com/search?keyword=女子违停后男子自己撞上车并拍视频)
+1. [巴以冲突或改变中东地区政治走向](https://so.toutiao.com/search?keyword=巴以冲突或改变中东地区政治走向)
+1. [新郎父亲亲友团列队迎宾](https://so.toutiao.com/search?keyword=新郎父亲亲友团列队迎宾)
+1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
+1. [浙江国祥IPO背后三大槽点](https://so.toutiao.com/search?keyword=浙江国祥IPO背后三大槽点)
+1. [金价跌跌不休 大金镯子还能安排吗](https://so.toutiao.com/search?keyword=金价跌跌不休+大金镯子还能安排吗)
+1. [黎巴嫩就遭到以色列袭击发表声明](https://so.toutiao.com/search?keyword=黎巴嫩就遭到以色列袭击发表声明)
+1. [日本多地观测到海啸](https://so.toutiao.com/search?keyword=日本多地观测到海啸)
+1. [伊朗总统与哈马斯领导人通电话](https://so.toutiao.com/search?keyword=伊朗总统与哈马斯领导人通电话)
+1. [亚运赛场这些“抱抱”有被暖到](https://so.toutiao.com/search?keyword=亚运赛场这些“抱抱”有被暖到)
+1. [轿车撞进加油站起火 众人惊险救援](https://so.toutiao.com/search?keyword=轿车撞进加油站起火+众人惊险救援)
+1. [韩媒：美国有可能逼出中国版阿斯麦](https://so.toutiao.com/search?keyword=韩媒：美国有可能逼出中国版阿斯麦)
+1. [多国正从以色列紧急撤侨](https://so.toutiao.com/search?keyword=多国正从以色列紧急撤侨)
+1. [商务部：一项涉台贸易壁垒调查延期](https://so.toutiao.com/search?keyword=商务部：一项涉台贸易壁垒调查延期)
+1. [湖南多地披露编外人员清退工作](https://so.toutiao.com/search?keyword=湖南多地披露编外人员清退工作)
+1. [亚运会闭幕式日本8分钟表演引热议](https://so.toutiao.com/search?keyword=亚运会闭幕式日本8分钟表演引热议)
+1. [日本发布海啸预警](https://so.toutiao.com/search?keyword=日本发布海啸预警)
 1. [超12万巴勒斯坦民众逃离加沙](https://so.toutiao.com/search?keyword=超12万巴勒斯坦民众逃离加沙)
 1. [为何说巴以冲突升级倒霉的还是欧洲](https://so.toutiao.com/search?keyword=为何说巴以冲突升级倒霉的还是欧洲)
 1. [媒体发以士兵被哈马斯抓住游街视频](https://so.toutiao.com/search?keyword=媒体发以士兵被哈马斯抓住游街视频)
-1. [李思思从央视离职](https://so.toutiao.com/search?keyword=李思思从央视离职)
-1. [3名队员未劝止拍摄不雅画面被停职](https://so.toutiao.com/search?keyword=3名队员未劝止拍摄不雅画面被停职)
 1. [《志愿军》夺国庆档口碑冠军](https://so.toutiao.com/search?keyword=《志愿军》夺国庆档口碑冠军)
 1. [杭州亚运会留下的“三大遗产”](https://so.toutiao.com/search?keyword=杭州亚运会留下的“三大遗产”)
 1. [这些证书已取消别再考了](https://so.toutiao.com/search?keyword=这些证书已取消别再考了)
-1. [母女驾车去看外婆回程落水双双溺亡](https://so.toutiao.com/search?keyword=母女驾车去看外婆回程落水双双溺亡)
 1. [受台风影响广东江门停课](https://so.toutiao.com/search?keyword=受台风影响广东江门停课)
-1. [以色列音乐节遇袭 至少260人死亡](https://so.toutiao.com/search?keyword=以色列音乐节遇袭+至少260人死亡)
-1. [女子大堂取外卖摔断玉镯酒店该赔吗](https://so.toutiao.com/search?keyword=女子大堂取外卖摔断玉镯酒店该赔吗)
-1. [以色列中国留学生发交战视频](https://so.toutiao.com/search?keyword=以色列中国留学生发交战视频)
 1. [冯琳主持人大赛第一名晋级](https://so.toutiao.com/search?keyword=冯琳主持人大赛第一名晋级)
-1. [走失女童爸爸发声：是我自己大意](https://so.toutiao.com/search?keyword=走失女童爸爸发声：是我自己大意)
 1. [这座场馆助力巴基斯坦体育健儿逐梦](https://so.toutiao.com/search?keyword=这座场馆助力巴基斯坦体育健儿逐梦)
-1. [K435列车命案嫌犯被鉴定为精神病人](https://so.toutiao.com/search?keyword=K435列车命案嫌犯被鉴定为精神病人)
-1. [女子吐槽丈夫每年回无人老家太费钱](https://so.toutiao.com/search?keyword=女子吐槽丈夫每年回无人老家太费钱)
 1. [馆方回应男孩溺亡：救生员不在现场](https://so.toutiao.com/search?keyword=馆方回应男孩溺亡：救生员不在现场)
 1. [多名落马官员被逮捕](https://so.toutiao.com/search?keyword=多名落马官员被逮捕)
 1. [国际油价8日上涨或受巴以局势影响](https://so.toutiao.com/search?keyword=国际油价8日上涨或受巴以局势影响)
-1. [湖南多地披露编外人员清退工作](https://so.toutiao.com/search?keyword=湖南多地披露编外人员清退工作)
-1. [新郎父亲亲友团列队迎宾](https://so.toutiao.com/search?keyword=新郎父亲亲友团列队迎宾)
 1. [成品油明晚或迎下调](https://so.toutiao.com/search?keyword=成品油明晚或迎下调)
-1. [日本多地观测到海啸](https://so.toutiao.com/search?keyword=日本多地观测到海啸)
 1. [曝女童在托婴中心遭同学拽头发被咬](https://so.toutiao.com/search?keyword=曝女童在托婴中心遭同学拽头发被咬)
-1. [男孩遭同学殴打致脑溢血 教育局发声](https://so.toutiao.com/search?keyword=男孩遭同学殴打致脑溢血+教育局发声)
 1. [德国总理：坚定站在以色列一边](https://so.toutiao.com/search?keyword=德国总理：坚定站在以色列一边)
 1. [空军原司令员于振武上将逝世](https://so.toutiao.com/search?keyword=空军原司令员于振武上将逝世)
 1. [放贷给恒大的银行高管会被处罚吗](https://so.toutiao.com/search?keyword=放贷给恒大的银行高管会被处罚吗)
 1. [高校阅览室学生打游戏管理员抽烟](https://so.toutiao.com/search?keyword=高校阅览室学生打游戏管理员抽烟)
 1. [王志清任东方航空集团董事长](https://so.toutiao.com/search?keyword=王志清任东方航空集团董事长)
-1. [33层楼被底楼住户挖出四室一厅](https://so.toutiao.com/search?keyword=33层楼被底楼住户挖出四室一厅)
 1. [李子柒商业版图盘点](https://so.toutiao.com/search?keyword=李子柒商业版图盘点)
 1. [60秒回顾杭州亚运会闭幕式精彩瞬间](https://so.toutiao.com/search?keyword=60秒回顾杭州亚运会闭幕式精彩瞬间)
 1. [开幕秋分闭幕寒露是中国人的浪漫](https://so.toutiao.com/search?keyword=开幕秋分闭幕寒露是中国人的浪漫)
@@ -64,7 +86,6 @@
 1. [男孩在泳池不慎脱离泳圈后溺亡](https://so.toutiao.com/search?keyword=男孩在泳池不慎脱离泳圈后溺亡)
 1. [足球报：许家印被抓后球队一切正常](https://so.toutiao.com/search?keyword=足球报：许家印被抓后球队一切正常)
 1. [创亚洲纪录潜水员在广西下水失联](https://so.toutiao.com/search?keyword=创亚洲纪录潜水员在广西下水失联)
-1. [金价跌跌不休 大金镯子还能安排吗](https://so.toutiao.com/search?keyword=金价跌跌不休+大金镯子还能安排吗)
 1. [张雨霏回应获亚运女子MVP](https://so.toutiao.com/search?keyword=张雨霏回应获亚运女子MVP)
 1. [乌前总统顾问：巴以冲突对乌军不利](https://so.toutiao.com/search?keyword=乌前总统顾问：巴以冲突对乌军不利)
 1. [女方曝与罗中旭交往细节](https://so.toutiao.com/search?keyword=女方曝与罗中旭交往细节)
@@ -129,7 +150,6 @@
 1. [第六次中东战争会爆发吗？专家解读](https://so.toutiao.com/search?keyword=第六次中东战争会爆发吗？专家解读)
 1. [专家：望舒默访华有助中美关系向稳](https://so.toutiao.com/search?keyword=专家：望舒默访华有助中美关系向稳)
 1. [沃克赛后与阿森纳助教发生冲突](https://so.toutiao.com/search?keyword=沃克赛后与阿森纳助教发生冲突)
-1. [韩媒：美国有可能逼出中国版阿斯麦](https://so.toutiao.com/search?keyword=韩媒：美国有可能逼出中国版阿斯麦)
 1. [哈马斯和杰哈德扣押130余名人质](https://so.toutiao.com/search?keyword=哈马斯和杰哈德扣押130余名人质)
 1. [防火队员拍摄传播不雅监控或涉犯罪](https://so.toutiao.com/search?keyword=防火队员拍摄传播不雅监控或涉犯罪)
 1. [26省国庆黄金周旅游数据出炉](https://so.toutiao.com/search?keyword=26省国庆黄金周旅游数据出炉)
